tests/ui/parser/pat-lt-bracket-3.stderr
error: generic args in patterns require the turbofish syntax
  --> $DIR/pat-lt-bracket-3.rs:6:16
   |
LL |             Foo<T>(x, y) => {
   |                ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |             Foo::<T>(x, y) => {
   |                ++

error: aborting due to 1 previous error

